@@ -1,3 +1,7 @@
+version 2.6.2
+--------------
+Thanks to Mike on dar-support mailing list for bug report.
+
 version 2.6.1
 --------------
 Thanks to David Niklas for contribution upgrading the /etc/darrc list
